// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link activeClassName? 1`] = `
"<a
  activeClassName=\\"activeCx\\"
  className=\\"activeCx\\"
  href=\\"test://url.tld/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
  style={{}}
>
  c
</a>"
`;

exports[`Link activeClassName? 2`] = `
"<a
  activeClassName=\\"activeCx\\"
  href=\\"test://url.tld/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
  style={{}}
>
  c
</a>"
`;

exports[`Link works with \`\`href\`\` 1`] = `
"<a
  href=\\"test://url.tld/b\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
  style={{}}
>
  c
</a>"
`;

exports[`Link works with \`\`to\`\` 1`] = `
"<a
  href=\\"test://url.tld/b\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
  style={{}}
>
  c
</a>"
`;

exports[`Link works with external \`\`href\`\` 1`] = `
"<a href=\\"http://b.com\\">
  c
</a>"
`;

exports[`Link works with external \`\`href\`\` 2`] = `
"<a href=\\"http://b.com\\">
  c
</a>"
`;

exports[`Link works with internal \`\`href\`\` 1`] = `
"<a
  href=\\"test://url.tld/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
  style={{}}
>
  c
</a>"
`;

exports[`Link works with internal \`\`href\`\` 2`] = `
"<a
  href=\\"test://url.tld/internal\\"
  onClick={function noRefCheck() {}}
  onKeyDown={function noRefCheck() {}}
  style={{}}
>
  c
</a>"
`;
